responsivness fixed in - user, group, commn, tags, cw, pagination; issue in header fixed

--- a/src/app/commn/commn.component.html
+++ b/src/app/commn/commn.component.html
@@ -14,7 +14,8 @@
               </button>
             </div>
             <div class="row mt-4 mx-0">
-              <div class="sub-tab-nav" [ngClass]="{'col-md-12': !showRowInfo, 'col-md-8': showRowInfo}">
+              <div class="sub-tab-nav"
+                [ngClass]="{'col-md-12': !showRowInfo, 'col-sm-0 col-md-6 col-lg-7 col-xl-8': showRowInfo}">
                 <div class="card overflow-hidden">
                   <div class="card-header border-0">
                     <mat-tab-group [selectedIndex]="activeIndex" (selectedTabChange)="onTabChange($event)">
@@ -34,7 +35,7 @@
                   </div>
                 </div>
               </div>
-              <div class="workspace w-100 col-md-4" *ngIf="showRowInfo">
+              <div class="workspace w-100 col-12 col-md-6 col-lg-5 col-xl-4" *ngIf="showRowInfo">
                 <app-loader [type]="'page'" *ngIf="docLoading"></app-loader>
                 <div class="doc" *ngIf="!docLoading">
                   <div class="card">
@@ -65,7 +66,8 @@
                           <div class="value">
                             <span *ngIf="rowInfo.sendToGroup===1">All Users</span>
                             <span *ngIf="rowInfo.sendToGroup!=1 && rowInfo.recipients && rowInfo.recipients.length>0">
-                              <span *ngFor="let rcp of rowInfo.recipients" class="badge badge-light p-2 mt-2 mt-sm-0">{{rcp.name}}</span>
+                              <span *ngFor="let rcp of rowInfo.recipients"
+                                class="badge badge-light p-2 mt-2 mt-sm-0">{{rcp.name}}</span>
                             </span>
                           </div>
                         </div>
@@ -193,13 +195,15 @@
             </tr>
           </thead>
           <tbody *ngIf="!loading && ancmnts.length > 0">
-            <tr *ngFor="let ancmnt of ancmnts" (click)="toggleInfo(ancmnt)" [ngClass]="{'sel-row':(rowInfo.id === ancmnt.id)}">
+            <tr *ngFor="let ancmnt of ancmnts" (click)="toggleInfo(ancmnt)"
+              [ngClass]="{'sel-row':(rowInfo.id === ancmnt.id)}">
               <td *ngFor="let col of cols">
                 <span [ngSwitch]="col.k">
                   <span *ngSwitchCase="'sendToGroup'">
                     <span *ngIf="ancmnt.sendToGroup===1">All Users</span>
                     <span *ngIf="ancmnt.sendToGroup!=1 && ancmnt.recipients && ancmnt.recipients.length>0">
-                      <span *ngFor="let rcp of ancmnt.recipients" class="badge badge-light p-2 mt-2 mt-sm-0">{{rcp.name}}</span>
+                      <span *ngFor="let rcp of ancmnt.recipients"
+                        class="badge badge-light p-2 mt-2 mt-sm-0 mr-2">{{rcp.name}}</span>
                     </span>
                   </span>
                   <span *ngSwitchCase="'deliveredOn'">
@@ -217,7 +221,8 @@
               <td *ngIf="activeIndex==0 || activeIndex==1">
                 <button *ngIf="activeIndex==0" class="btn btn-primary btn-sm hover-btn"
                   (click)="archAncmnt($event, ancmnt)">Archive</button>
-                <button *ngIf="activeIndex==1" class="btn btn-primary btn-sm hover-btn" (click)="updAncmnt($event, ancmnt, anncModal)">Edit</button>
+                <button *ngIf="activeIndex==1" class="btn btn-primary btn-sm hover-btn"
+                  (click)="updAncmnt($event, ancmnt, anncModal)">Edit</button>
               </td>
             </tr>
           </tbody>
@@ -265,7 +270,7 @@
     <div class="modal-body" ngbAutofocus>
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>Subject</mat-label>
-        <input matInput placeholder="Subject" formControlName="subject" maxlength="100" required/>
+        <input matInput placeholder="Subject" formControlName="subject" maxlength="100" required />
         <mat-error *ngIf="ancmntForm.get('subject')!.hasError('required')">
           Subject is required
         </mat-error>
@@ -297,11 +302,12 @@
             {{d.name}}
             <i matChipRemove class="fas fa-times-circle" *ngIf="removable"></i>
           </mat-chip>
-          <input matInput #wrkSpcInp formControlName="usrWrkSpcs" placeholder="Select user workspaces(s)" [matAutocomplete]="auto1">
+          <input matInput #wrkSpcInp formControlName="usrWrkSpcs" placeholder="Select user workspaces(s)"
+            [matAutocomplete]="auto1">
           <!-- (matChipInputTokenEnd)="add($event)" -->
         </mat-chip-list>
-        <mat-autocomplete #auto1="matAutocomplete" (optionSelected)="selFromAutoComp($event.option.value,'selWrkSpcs',wrkSpcInp)"
-          [displayWith]="displayFn">
+        <mat-autocomplete #auto1="matAutocomplete"
+          (optionSelected)="selFromAutoComp($event.option.value,'selWrkSpcs',wrkSpcInp)" [displayWith]="displayFn">
           <mat-option *ngFor="let wrkSpc of wrkSpcs" [value]="wrkSpc">
             {{wrkSpc.name}} <br />
             <small *ngIf="wrkSpc.hub && wrkSpc.hub.name">{{wrkSpc.hub.name}}</small>
@@ -316,11 +322,12 @@
             {{d.name}}
             <i matChipRemove class="fas fa-times-circle" *ngIf="removable"></i>
           </mat-chip>
-          <input matInput #grpInp formControlName="usrGrps" placeholder="Select user group(s)" [matAutocomplete]="auto2">
+          <input matInput #grpInp formControlName="usrGrps" placeholder="Select user group(s)"
+            [matAutocomplete]="auto2">
           <!-- (matChipInputTokenEnd)="add($event)" -->
         </mat-chip-list>
-        <mat-autocomplete #auto2="matAutocomplete" (optionSelected)="selFromAutoComp($event.option.value,'selGrps',grpInp)"
-          [displayWith]="displayFn">
+        <mat-autocomplete #auto2="matAutocomplete"
+          (optionSelected)="selFromAutoComp($event.option.value,'selGrps',grpInp)" [displayWith]="displayFn">
           <mat-option *ngFor="let grp of grps" [value]="grp">
             {{grp.name}}
           </mat-option>
@@ -355,7 +362,8 @@
       </div>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-secondary" [disabled]="disabled" (click)="modal.dismiss('Cross click')">Close</button>
+      <button type="button" class="btn btn-secondary" [disabled]="disabled"
+        (click)="modal.dismiss('Cross click')">Close</button>
       <button class="btn btn-primary" [disabled]="ancmntForm!.invalid || (ancmntForm.value.sendToGroup==2 && selWrkSpcs.length<=0)
         || (ancmntForm.value.sendToGroup==3 && selGrps.length<=0) || disabled">
         <app-loader [type]="'btn'" *ngIf="disabled"></app-loader>
