--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,5 +1,5 @@
 <div class="card-footer row justify-content-between mx-0" *ngIf="totalCount">
-  <div class="pages">
+  <div class="pages my-1">
     <mat-form-field appearance="outline" class="mr-2">
       <mat-select [(ngModel)]="pageSize" (selectionChange)="chngPageSize()">
         <mat-option [value]="lP" *ngFor="let lP of lmtPage">{{lP}}</mat-option>
@@ -7,6 +7,7 @@
     </mat-form-field>
     <span>{{text}}</span>
   </div>
-  <ngb-pagination [collectionSize]="totalCount" [(page)]="page" [maxSize]="3" [pageSize]="pageSize" [rotate]="true" [boundaryLinks]="true" (pageChange)="chngPageNo()">
+  <ngb-pagination class="my-1" [collectionSize]="totalCount" [(page)]="page" [maxSize]="3" [pageSize]="pageSize"
+    [rotate]="true" [boundaryLinks]="true" (pageChange)="chngPageNo()">
   </ngb-pagination>
 </div>
