--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -1,94 +1,99 @@
 <app-loader [type]="'page'" *ngIf="catgLoading && tagLoading; else loadPage;"></app-loader>
 <ng-template #loadPage>
   <div class="tags-page row mx-0">
-    <div class="sub-tab-nav row mx-0 mt-4 px-0" [ngClass]="{'col-md-12': !showRowInfo, 'col-md-8': showRowInfo}">
-      <div class="col" style="min-width: 265px; max-width: 265px;">
+    <div class="sub-tab-nav row mx-0 mt-4 px-0"
+      [ngClass]="{'col-md-12': !showRowInfo, 'col-md-0 col-lg-7 col-xl-8': showRowInfo}">
+      <div class="left-side col-lg" [ngClass]="{'col-lg-0': showRowInfo}">
         <div class="card bg-hi-grey" style="min-height:100% !important;">
-          <div class="card-body">
-            <div class="text-hi-dark-grey">Tags</div>
-            <ul class="list-unstyled pl-2 mt-1">
-              <li class="dark-bg-hover px-2 py-1 rounded mt-2" [ngClass]="{'act-tag': selTag == 'all'}"
-                (click)="chngTags('all')">All tags</li>
-              <li class="dark-bg-hover px-2 py-1 rounded mt-2" [ngClass]="{'act-tag': selTag == 'uncatg'}"
-                (click)="chngTags('uncatg')">
-                Uncategorized Tags
-              </li>
-            </ul>
-            <hr>
-            <div class="text-hi-dark-grey">
-              Categories
-              <div class="float-right btn p-0" (click)="showCatgIn = !showCatgIn"><i
-                  class="fa fa-plus-circle text-primary"></i>
-              </div>
-              <form name="catgForm" (ngSubmit)="addCatg()" [formGroup]="catgForm" novalidate *ngIf="showCatgIn">
-                <mat-form-field appearance="outline" class="custom-mat-input sp-mat-input w-100 my-2 flex bg-white"
-                  [floatLabel]="'never'">
-                  <input matInput placeholder="Add Category" class="ml-0" formControlName="name" maxlength="100" required />
-                  <div matSuffix>
-                    <button class="btn btn-secondary input-btn mr-1" (click)="cancelCatg();">
-                      <i class="fas fa-times"></i>
-                    </button>
-                    <button type="submit" class="btn btn-primary input-btn"
-                      [disabled]="catgForm!.invalid || catgAddDisabled">
-                      <app-loader [type]="'btn'" *ngIf="catgAddDisabled" class="align-spin-top"></app-loader>
-                      <i class="fas fa-check-circle" *ngIf="!catgAddDisabled"></i>
-                    </button>
-                  </div>
-                  <mat-error *ngIf="catgForm.get('name')!.hasError('required')" class="mt-3">
-                    Name is required
-                  </mat-error>
-                </mat-form-field>
-              </form>
+          <div class="card-body d-flex-lg">
+            <div class="flex-lg-1 border-lg pr-3 pr-lg-0">
+              <div class="text-hi-dark-grey">Tags</div>
+              <ul class="list-unstyled pl-2 mt-1">
+                <li class="dark-bg-hover px-2 py-1 rounded mt-2" [ngClass]="{'act-tag': selTag == 'all'}"
+                  (click)="chngTags('all')">All tags</li>
+                <li class="dark-bg-hover px-2 py-1 rounded mt-2" [ngClass]="{'act-tag': selTag == 'uncatg'}"
+                  (click)="chngTags('uncatg')">
+                  Uncategorized Tags
+                </li>
+              </ul>
             </div>
-            <ul ngbNav #catgNav="ngbNav" [(activeId)]="activeCatgs"
-              class="nav-tabs justify-content-end border-bottom-0 mr-0 border-color-grey w-100"
-              (activeIdChange)="changeDispCatgs()">
-              <li [ngbNavItem]="1">
-                <a ngbNavLink>Active</a>
-              </li>
-              <li [ngbNavItem]="2">
-                <a ngbNavLink>Disabled</a>
-              </li>
-            </ul>
-            <ul class="list-unstyled cat-list pl-2 border-top">
-              <app-loader [type]="'div'" *ngIf="catgLoading; else loadCatgs;"></app-loader>
-              <ng-template #loadCatgs>
-                <ng-container *ngIf="catgs.length > 0; else noCatg">
-                  <li class="dark-bg-hover px-2 py-1 rounded mt-2" *ngFor="let catg of catgs"
-                    (click)="chngTags(catg.id)" [ngClass]="{'act-tag': selTag == catg.id}">
-                    {{catg.name}}
-                    <div class="float-right row mx-0">
-                      <div class="dropdown">
-                        <div class="dropdown-toggle disable-icon" type="button" id="catEllipsis" data-toggle="dropdown"
-                          aria-haspopup="true" aria-expanded="false">
-                          <i class="fa fa-ellipsis-h"></i>
-                        </div>
-                        <div class="dropdown-menu" aria-labelledby="catEllipsis">
-                          <a class="dropdown-item" (click)="updCatgModal(editCategory, catg)">
-                            <i class="fas fa-edit mr-1"></i>Edit
-                          </a>
-                          <a class="dropdown-item text-{{catg.isActive ? 'primary' : 'success'}}"
-                            (click)="actDeactCatg(catg)">
-                            <i class="mr-1 fas"
-                              [ngClass]="{'fa-toggle-off': catg.isActive, 'fa-toggle-on': !catg.isActive}"></i>
-                            {{catg.isActive ? 'Deactivate' : 'Activate'}}
-                          </a>
+            <div class="flex-lg-1 pt-0 pt-lg-3 pl-3 pr-lg-0">
+              <div class="text-hi-dark-grey">
+                Categories
+                <div class="float-right btn p-0" (click)="showCatgIn = !showCatgIn"><i
+                    class="fa fa-plus-circle text-primary"></i>
+                </div>
+                <form name="catgForm" (ngSubmit)="addCatg()" [formGroup]="catgForm" novalidate *ngIf="showCatgIn">
+                  <mat-form-field appearance="outline" class="custom-mat-input sp-mat-input w-100 my-2 flex bg-white"
+                    [floatLabel]="'never'">
+                    <input matInput placeholder="Add Category" class="ml-0" formControlName="name" maxlength="100"
+                      required />
+                    <div matSuffix>
+                      <button class="btn btn-secondary input-btn mr-1" (click)="cancelCatg();">
+                        <i class="fas fa-times"></i>
+                      </button>
+                      <button type="submit" class="btn btn-primary input-btn"
+                        [disabled]="catgForm!.invalid || catgAddDisabled">
+                        <app-loader [type]="'btn'" *ngIf="catgAddDisabled" class="align-spin-top"></app-loader>
+                        <i class="fas fa-check-circle" *ngIf="!catgAddDisabled"></i>
+                      </button>
+                    </div>
+                    <mat-error *ngIf="catgForm.get('name')!.hasError('required')" class="mt-3">
+                      Name is required
+                    </mat-error>
+                  </mat-form-field>
+                </form>
+              </div>
+              <ul ngbNav #catgNav="ngbNav" [(activeId)]="activeCatgs"
+                class="nav-tabs justify-content-end border-bottom-0 mr-0 border-color-grey w-100"
+                (activeIdChange)="changeDispCatgs()">
+                <li [ngbNavItem]="1">
+                  <a ngbNavLink>Active</a>
+                </li>
+                <li [ngbNavItem]="2">
+                  <a ngbNavLink>Disabled</a>
+                </li>
+              </ul>
+              <ul class="list-unstyled cat-list pl-2 border-top">
+                <app-loader [type]="'div'" *ngIf="catgLoading; else loadCatgs;"></app-loader>
+                <ng-template #loadCatgs>
+                  <ng-container *ngIf="catgs.length > 0; else noCatg">
+                    <li class="dark-bg-hover px-2 py-1 rounded mt-2" *ngFor="let catg of catgs"
+                      (click)="chngTags(catg.id)" [ngClass]="{'act-tag': selTag == catg.id}">
+                      {{catg.name}}
+                      <div class="float-right row mx-0">
+                        <div class="dropdown">
+                          <div class="dropdown-toggle disable-icon" type="button" id="catEllipsis"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fa fa-ellipsis-h"></i>
+                          </div>
+                          <div class="dropdown-menu" aria-labelledby="catEllipsis">
+                            <a class="dropdown-item" (click)="updCatgModal(editCategory, catg)">
+                              <i class="fas fa-edit mr-1"></i>Edit
+                            </a>
+                            <a class="dropdown-item text-{{catg.isActive ? 'primary' : 'success'}}"
+                              (click)="actDeactCatg(catg)">
+                              <i class="mr-1 fas"
+                                [ngClass]="{'fa-toggle-off': catg.isActive, 'fa-toggle-on': !catg.isActive}"></i>
+                              {{catg.isActive ? 'Deactivate' : 'Activate'}}
+                            </a>
+                          </div>
                         </div>
                       </div>
+                    </li>
+                  </ng-container>
+                  <ng-template #noCatg>
+                    <div class="text-secondary text-center mt-2">
+                      No catgories found
                     </div>
-                  </li>
-                </ng-container>
-                <ng-template #noCatg>
-                  <div class="text-secondary text-center mt-2">
-                    No catgories found
-                  </div>
+                  </ng-template>
                 </ng-template>
-              </ng-template>
-            </ul>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg mt-3 mt-lg-0">
         <div class="card overflow-hidden w-100">
           <div class="card-body rounded-bottom px-0 pb-0">
             <h5 class="card-title px-3">
@@ -112,7 +117,8 @@
                           (matChipInputTokenEnd)="addChips($event)" formControlName="name">
                       </mat-chip-list>
                     </mat-form-field>
-                    <button type="submit" class="btn btn-primary ml-auto" [disabled]="tagForm!.invalid || tagAddDisabled">
+                    <button type="submit" class="btn btn-primary ml-auto"
+                      [disabled]="tagForm!.invalid || tagAddDisabled">
                       <app-loader [type]="'btn'" *ngIf="tagAddDisabled"></app-loader>
                       Create
                     </button>
@@ -137,12 +143,14 @@
                     <tr>
                       <th class="curs-ptr" *ngFor="let col of cols;let i =index" (click)="sortChange(col,i)">
                         {{col.n}}
-                        <i *ngIf="col.hasOwnProperty('asc')" class="fas ml-1" [ngClass]="{'fa-sort-down align-top': !col.asc, 'fa-sort-up align-bottom': col.asc}"></i>
+                        <i *ngIf="col.hasOwnProperty('asc')" class="fas ml-1"
+                          [ngClass]="{'fa-sort-down align-top': !col.asc, 'fa-sort-up align-bottom': col.asc}"></i>
                       </th>
                     </tr>
                   </thead>
                   <tbody *ngIf="tags.length > 0">
-                    <tr class="curs-ptr" (click)="toggleInfo(tg)" *ngFor="let tg of tags" [ngClass]="{'sel-row':(rowInfo.id === tg.id)}">
+                    <tr class="curs-ptr" (click)="toggleInfo(tg)" *ngFor="let tg of tags"
+                      [ngClass]="{'sel-row':(rowInfo.id === tg.id)}">
                       <td>{{tg.name}}</td>
                       <td class="text-hi-dark-grey">{{tg.isActive?'Active':'In Active'}}</td>
                       <td>{{(tg.updatedDate|date:'dd MMM, yyyy HH:mm')||'N/A'}}</td>
@@ -161,7 +169,7 @@
         </div>
       </div>
     </div>
-    <div class="workspace w-100 col-md-4 mt-4" *ngIf="showRowInfo">
+    <div class="workspace w-100 col-12 col-lg-5 col-xl-4 mt-4" *ngIf="showRowInfo">
       <div class="document">
         <div class="card">
           <div class="card-header row m-0">
