--- a/src/app/hub/tags/tags.component.scss
+++ b/src/app/hub/tags/tags.component.scss
@@ -15,3 +15,32 @@
     }
   }
 }
+
+.left-side {
+  width: 100%;
+
+  @media (min-width:992px) {
+    min-width: 265px;
+    max-width: 265px;
+  }
+}
+
+.d-flex-lg {
+  @media (max-width: 991.99px) {
+    display: flex;
+
+    .flex-lg-1 {
+      flex: 1;
+    }
+  }
+}
+
+.border-lg {
+  @media (max-width: 991.99px) {
+    border-right: 1px solid #D8D8D8;
+  }
+
+  @media (min-width:992px) {
+    border-bottom: 1px solid #D8D8D8;
+  }
+}
