--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,10 @@ body {
   .w-lg-50 {
     width: 50% !important;
   }
+
+  .col-lg-0 {
+    display: none !important;
+  }
 }
 
 @include media-breakpoint-down(md) {
@@ -40,6 +44,10 @@ body {
   .w-md-90 {
     width: 90% !important;
   }
+
+  .col-md-0 {
+    display: none !important;
+  }
 }
 
 @include media-breakpoint-down(sm) {
@@ -49,6 +57,10 @@ body {
 
   .w-sm-100 {
     width: 100% !important;
+  }
+
+  .col-sm-0 {
+    display: none !important;
   }
 }
 
@@ -918,36 +930,27 @@ header {
   }
 
   .main {
-    .col-3 {
+    .view-main {
       .image {
-        min-height: 100px;
         position: relative;
+        min-height: 179px;
 
-        @media (min-width: 1300px) {
-          min-height: 130px;
+        @media (max-width: 1400px) {
+          min-height: 127px;
         }
 
-        @media (min-width: 1600px) {
-          min-height: 160px;
+        @media (max-width: 1200px) {
+          min-height: 134px;
         }
+
 
         img {
           position: absolute;
           top: 50%;
           left: 50%;
           transform: translate(-50%, -50%);
-          max-height: 100px;
-          max-width: 100px;
-
-          @media (min-width: 1300px) {
-            max-height: 130px;
-            max-width: 120px;
-          }
-
-          @media (min-width: 1600px) {
-            max-height: 160px;
-            max-width: 160px;
-          }
+          max-height: 100%;
+          max-width: 100%;
         }
 
         .dropdown {
