profile, divisions - settings - rsponsive behaviour done

--- a/src/app/setting/division/division.component.html
+++ b/src/app/setting/division/division.component.html
@@ -36,7 +36,7 @@
     </div>
   </h3>
   <div class="mt-2 row">
-    <div class="col-md-4">
+    <div class="col-xl-4">
       <div class="card">
         <div class="card-header">
           Assigned Groups
@@ -76,7 +76,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-8">
+    <div class="col-xl-8 mt-3 mt-xl-0">
       <div class="card">
         <div class="card-header">
           Promoted Members
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="card-body">
-          <table class="table">
+          <table class="table table-hover text-dark w-100">
             <thead>
               <tr>
                 <th scope="col">User</th>
