--- a/src/app/web-app/resource/exp/exp-inner/exp-inner.component.scss
+++ b/src/app/web-app/resource/exp/exp-inner/exp-inner.component.scss
@@ -1,12 +1,21 @@
-.col-md-3 {
+.view-items {
   .icon {
-    min-height: 200px;
+    min-height: 278px;
     position: relative;
+
+    @media (min-width: 768px) {
+      min-height: 245;
+    }
+
+    @media (min-width: 1200px) {
+      min-height: 294px;
+    }
+
 
     img {
       position: absolute;
       max-width: 100%;
-      max-height: 200px;
+      max-height: 100%;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
